News UAT/force-app/main/default/objects/Requirement_Basic__c/Requirement_Basic__c.object-meta.xml
<CustomObject>
    <description>Requirements object for the basic Requirements app</description>
    <label>Requirement (Basic)</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Requirement (Basic) ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requirements (Basic)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>