News UAT/force-app/main/default/objects/Requirement_Basic__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Configuration</fullName>
                <default>true</default>
                <label>Configuration</label>
            </value>
            <value>
                <fullName>Analytics</fullName>
            </value>
            <value>
                <fullName>Security (Profile/Roles/Layouts)</fullName>
            </value>
            <value>
                <fullName>Custom Code</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Territory Management</fullName>
            </value>
            <value>
                <fullName>Need More Information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>