News UAT/force-app/main/default/objects/Requirement_Basic__c/fields/Gap_Detail__c.field-meta.xml
<CustomField>
    <fullName>Gap_Detail__c</fullName>
    <label>Gap Detail</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>