News UAT/force-app/main/default/objects/Requirement_Basic__c/fields/Lines_of_Business_Requestor__c.field-meta.xml
<CustomField>
    <fullName>Lines_of_Business_Requestor__c</fullName>
    <label>Lines of Business Requestor-</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>