News UAT/force-app/main/default/objects/Requirement_Basic__c/fields/Open_Issues__c.field-meta.xml
<CustomField>
    <fullName>Open_Issues__c</fullName>
    <label>Open Issues</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>