News UAT/force-app/main/default/objects/Requirement_Basic__c/fields/Proposed_Approach__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Approach__c</fullName>
    <label>Proposed Approach</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>