News UAT/force-app/main/default/objects/Requirement_Basic__c/fields/Related_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Related_Requirement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Requirement - for duplicates or joint requirements or parent/child</description>
    <inlineHelpText>Related Requirement - for duplicates or joint requirements or parent/child</inlineHelpText>
    <label>Related Requirement</label>
    <referenceTo>Requirement_Basic__c</referenceTo>
    <relationshipLabel>Related Requirements</relationshipLabel>
    <relationshipName>Requirements_Basic</relationshipName>
    <type>Lookup</type>
</CustomField>