News UAT/force-app/main/default/objects/Requirement_Basic__c/fields/Requirement_Statement__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Statement__c</fullName>
    <description>Description of business requirement</description>
    <inlineHelpText>Description of business requirement</inlineHelpText>
    <label>Requirement Statement</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>