News UAT/force-app/main/default/objects/Requirement_Basic__c/fields/Requirement_Status__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Status__c</fullName>
    <label>Requirement Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Need More Information</fullName>
            </value>
            <value>
                <fullName>Pending Confirmation</fullName>
            </value>
            <value>
                <fullName>Lockdown</fullName>
            </value>
            <value>
                <fullName>Configuration In Progress</fullName>
            </value>
            <value>
                <fullName>Ready for Testing</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Future Release</fullName>
            </value>
            <value>
                <fullName>Out of Scope - Change Order</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Training / Process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>