News UAT/force-app/main/default/objects/Requirement_Basic__c/fields/Requirement_Title__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Title__c</fullName>
    <label>Requirement Title</label>
    <length>200</length>
    <type>Text</type>
</CustomField>