News UAT/force-app/main/default/objects/Requirement_Basic__c/fields/Source_of_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Requirement__c</fullName>
    <label>Source of Requirement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Original / BPR</fullName>
                <default>true</default>
                <label>Original / BPR</label>
            </value>
            <value>
                <fullName>Alpha Review</fullName>
            </value>
            <value>
                <fullName>Beta Review</fullName>
            </value>
            <value>
                <fullName>UAT</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>